# kic_notation

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  keyword.txt  library.json  library.properties
.github/workflows/: cmake.yml
examples/BasicUsage/: BasicUsage.ino
modules/: CMakeLists.txt  kic_notationConfig.cmake.in
modules/kic_parser/: flyweight_kic_parser.c  flyweight_kic_parser.h  kic_parser_specifications.h
modules/kic_timestamp/: kic_timestamp.c  kic_timestamp.h
src/: CMakeLists.txt  kic_notation.h
src/kic_notation/internal/: flyweight_kic_parser.h  kic_parser_specifications.h  kic_timestamp.h
src/kic_parser/: flyweight_kic_parser.c  flyweight_kic_parser.h
src/kic_timestamp/: kic_timestamp.c
test/: CMakeLists.txt
test/kic_parser/: flyweight_kic_parser_test.c
test/kic_timestamp/: kic_timestamp_test.c
